@@ -1,3 +1,9 @@
+Tue Apr 22 23:56:24 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* file.c (rb_io_stafs): use statfs(2) if fstatfs(2) is unavailable.
+
+	* configure.in (fstatfs): check it.
+
 Tue Apr 22 23:14:28 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/stringio/stringio.c (strio_write): use rb_str_append to
